# MovieBook

./: README.md  meson.build
app/: crud  moviebook
database/: movie_book.sql
docs/: REST_API.docx
include/: config.h  dbpool.h  entity.h  movieEndPoint.h  movieService.h
libs/: libpistache.so.0.0.002  libsoci_core.so.4.0.2  libsoci_mysql.so.4.0.2
src/: config.cpp  dbpool.cpp  main.cpp  movieEndPoint.cpp  movieService.cpp
