project('rest_crud', 'cpp', default_options : ['cpp_std=c++17', ])
cxx = meson.get_compiler('cpp')
pistache_dep = cxx.find_library('pistache')
dl_dep = cxx.find_library('dl')
soci_core_dep = cxx.find_library('soci_core')
soci_mysql_dep = cxx.find_library('soci_mysql')
thread_dep = cxx.find_library('pthread')
json_dep = dependency('jsoncpp')
mysql_dep = dependency('mysqlclient')
inc_dir = include_directories('./include')
executable('moviebook', './src/main.cpp', './src/movieEndPoint.cpp', './src/dbpool.cpp', './src/movieService.cpp', './src/config.cpp',dependencies:[pistache_dep,dl_dep,mysql_dep,soci_core_dep,soci_mysql_dep,thread_dep, mysql_dep, json_dep], include_directories:[inc_dir], cpp_args : '-DCONFIGURATION_PATH="../config/config.json"')
